--- a/src/style/Form.css
+++ b/src/style/Form.css
@@ -94,7 +94,7 @@ button:hover{
     flex-direction: row;
     justify-content:center;
     margin-top: 6vh;
-    margin-left:4%;
+    margin-left:7%;
 }
 
 .social-media div {
@@ -113,3 +113,7 @@ button:hover{
 .twitter{
     background: url(https://cdn4.iconfinder.com/data/icons/social-media-icons-the-circle-set/48/twitter_circle-50.png);
 }
+.social-media div:hover{
+    cursor: pointer;
+} 
+
