--- a/src/style/Form.css
+++ b/src/style/Form.css
@@ -74,7 +74,7 @@ input::placeholder{
 button {
     margin-top: 10%;
     width: 48%;
-    height: 6vh;
+    height: 3vw;
     border-radius: 5vw;
     background: rgb(2, 0, 36);
     background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(121, 9, 113, 1) 35%, rgba(0, 212, 255, 1) 100%);
